[package]
name = "core-audio-types"
description = "Bindings to CoreAudioTypes framework"
homepage = "https://github.com/libark/core-audio-types"
repository = "https://github.com/libark/core-audio-types"
version = "0.1.2"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::audio", "os::macos-apis"]
keywords = ["coreauido"]
edition = "2018"

[dependencies]
cfg-if = "1.0"
core-foundation-sys = "0.8"
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
